--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -4,9 +4,14 @@
       <span class="title-left">Transactions for {{activeaccount.name}}</span>
       
       <span class="title-right">
-         <button  *ngIf="checkTransaction" class="btn btn-outline-success btn-sm" (click)="calcCheckedBalance()" title="checked balance">
-            <span>{{checkTransaction.balance}}&nbsp;</span> 
-            <i class="bi bi-arrow-clockwise"></i>
+         <button *ngIf="checkTransaction" class="btn btn-outline-success btn-sm" (disabled)="checkLoading" (click)="calcCheckedBalance()" title="checked balance">
+            <div *ngIf="!checkLoading">
+            <span>{{checkTransaction.balance}}&nbsp;</span><i class="bi bi-arrow-clockwise"></i>
+            </div>
+            <div *ngIf="checkLoading">
+               <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+               Loading...
+            </div>
          </button>
          &nbsp;
          <button class="btn btn-outline-success btn-sm" [routerLink]="['/viewchecked', activeaccount.id]" title="view checked list">
@@ -25,7 +30,7 @@
            <th class="account-edit" *ngIf="desktopDisplay"></th>
          </tr>
       </thead>
-      <tbody >
+      <tbody>
          <tr *ngFor="let txn of transactions" [ngClass]="{'table-success': txn.locked}">
             <td class="nowrap">{{txn.date.substring(2)}}</td>
             <td (swipeleft)="open(content, txn)">{{txn.comment}}</td>
@@ -155,8 +160,8 @@ related to using angular with the modal
                      <span class="acc-modal-label" id="lbdate">Date</span>
                   </div>
                   <!-- ng add @angular/localize was required to enable navigation backwards and forwards   -->
-                  <input ngbDatepicker #dt="ngbDatepicker" [(ngModel)]="txDate"
-                     name="txUDate" id="txUDate" type="text"
+                  <input ngbDatepicker #dt="ngbDatepicker" [(ngModel)]="txUpdDate"
+                     name="txUpdDate" id="txUpdDate" type="text"
                      class="form-control-date form-control form-control-sm" placeholder="YYYY-DD-MM">
                   <div class="input-group-append">
                      <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button">
